--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -41,9 +41,9 @@ GPA: 8.68/10.0
  assigning "very general" (although not principal) types to
  higher-order functions. Our experience so far suggests that the
  method is quite useful to automatically verify partial correctness
- properties of compiler transformations. The current implementation of
- the framework is available online. Work-in-progress presentations
- have been delivered at 
+ properties of compiler transformations. The current (partial)
+ implementation of the framework is available online. Work-in-progress
+ presentations have been delivered at 
  \begin{itemize} \itemsep -2pt  % reduce space
  \item Higher-Order Program Analysis (HOPA) Workshop, New Orleans,
  28th-29th June, 2013.
