--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -34,7 +34,7 @@ GPA: 8.68/10.0
  
 
 \section{Research}
- {\bf Declarative Programming over Eventually Consistent Datastores} \\
+ {\bf Declarative Programming over Eventually Consistent Data Stores} \\
  (With Sivaramakrishnan KC., and Suresh Jagannathan) Devised a
  logic-based language framework to express high-level consistency
  requirements of NoSQL applications. The framework delivers
@@ -53,23 +53,25 @@ GPA: 8.68/10.0
 
 
  {\bf Relational Framework for Higher-order Shape Analysis} \\
- (With Suresh Jagannathan) Devised a verification framework based on
- decidable relational logics to automatically reason about structural
- properties in ML-like languages. The framework manifests as a
- dependent type system for ML and scales to higher-order programs by
- assigning "very general" types to higher-order functions. Our
- experience so far suggests that the method is quite useful to
- automatically verify partial correctness properties of compiler
- transformations. A web interface to experiment with our
- implementation of the framework (called {\sc Catalyst}) is available
- online at \url{http://tycon.github.io/catalyst/}.
+ (With Suresh Jagannathan) Devised a specification language based on a
+ decidable relational logic to automatically reason about structural
+ properties in ML-like languages. Our specification language makes it
+ possible to capture rich semantics of data structure transformations
+ as logical formulas, and subsequently use them for either
+ verification or proving program equivalence. The verification
+ framework for our language (called {\sc Catalyst}) has been
+ implemented, and is available for experimentation at
+ \url{http://tycon.github.io/catalyst/}.
  \begin{itemize} \itemsep -2pt  % reduce space
- \item International Conference on Functional Programming (ICFP),
- Gothenburg, 1st-6th September, 2014.
- \item Higher-Order Program Analysis (HOPA) Workshop, New Orleans,
- 28th-29th June, 2013.
- \item Mid-west Verification Day (MVD), Chicago, 20th-21st September,
- 2013.
+ \item Published in the proceedings of the International Conference on
+ Functional Programming (ICFP), Gothenburg, 1st-6th September, 2014.
+ \item Presented at the Higher-Order Program Analysis (HOPA) Workshop,
+ New Orleans, 28th-29th June, 2013.
+ \item Presented at the Mid-west Verification Day (MVD), Chicago,
+ 20th-21st September, 2013.
+ \item Ongoing work on extending the framework with specification
+ inference is presented at the Mid-west Verification Day (MVD),
+ Columbia, MO, 2nd-3rd October, 2014.
  \end{itemize}
 
 {\bf A Novel Adaptive Scheduling Algorithm for Computational Grids}\\
@@ -77,8 +79,9 @@ GPA: 8.68/10.0
 dynamic load balancing algorithm for efficient task scheduling in
 computational grids.
  \begin{itemize} \itemsep -2pt  % reduce space
- \item IEEE conference on Internet Multimedia Systems Architecture and
- Applications (IMSAA), Bangalore, India, 2009.
+ \item Published in the proceedings of IEEE conference on Internet
+ Multimedia Systems Architecture and Applications (IMSAA), Bangalore,
+ India, 2009.
  \end{itemize}
 
 \section{Professional \\ Experience}
