--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -107,11 +107,12 @@ User interface module (UIM) group. Developed tools to test low-level
 mobile network code.\\
 
 \section{Academics}
-{\bf Relevant Graduate Coursework }\\
+{\bf Relevant Graduate Coursework (With Grades)}\\
 \begin{itemize}
-\item Programming Languages (Software Foundations with Coq), Software
-Engineering, Artificial Intelligence, Metaprogramming and Program
-Generation, and Current topics in Theoretical Computer Science.
+\item Programming Languages (A), Software Engineering (B),
+Metaprogramming and Program Generation (A+), Distributed Systems (A),
+Parallel Computing (A), and Current topics in Theoretical Computer
+Science (A-).  
 \item Attended Oregon Programming Languages Summer School (OPLSS'13)
 at Eugene, OR.
 \end{itemize}
