--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -22,101 +22,70 @@
  
 \begin{resume} 
  
-\section{Interests} 
-Program Logics, Type Systems and Static Analyses.
+\section{Research Focus}
+Applying PL techniques to simplify programming highly-scalable
+  data-intensive applications.
 
 \section{Education} 
 {\bf Ph.D., Computer Science}. \hfill 2012 - present\\
 Advised by Prof. Suresh Jagannathan.\\
 Purdue University, West Lafayette, IN.\\
-Current GPA: 3.77/4.0 \\
+\\
+{\bf M.S., Computer Science}. \hfill May, 2016\\
+Purdue University, West Lafayette, IN.\\
+GPA: 3.77/4.0 \\
 \\
 {\bf B.E.(Hons)., Computer Science}. \hfill July, 2009\\
 BITS, Pilani, India.\\
 GPA: 8.68/10.0
  
 
-\section{Research}
+\section{Publications}
 
- {\bf Broom : Safe Region-based Memory Management for Dataflow
- Systems}\\ (With G Ramalingam, K Vaswani, and D Vytiniotis)
- Distributed data processing engines (e.g: MapReduce) rely on
- general-purpose language runtimes to manage the execution of dataflow
- operators like \C{Join}. We observe that the memory behavior of such
- operators exhibit certain characteristics, which render
- general-purpose garbage collection a particularly ineffective memory
- management strategy. To address this problem, we propose {\sc Broom},
- dialect of C\# with programmer-managed memory regions. 
- %Regions are first-class values in
- %{\sc Broom}: they can be stored in data structures, and can be passed
- %as arguments to methods. Despite this expressivity, 
- {\sc Broom} empowers dataflow system builders to implement efficient
- region-based memory management strategies without incurring
- significant cost: it's region type system guarantees safety of all
- dereferences that are otherwise safe in presence of GC, while it's
- region type inference obviates any need for programmer-provided
- region type annotations. Experiments with real-world dataflow
- operators demonstrate upto 59\% performance improvement due to safe
- region-based memory managegement afforded via {\sc Broom}. An OCaml
- implementation of {\sc Broom}'s region type system and type inference
- can be obtained from \url{https://github.com/gowthamk/broomc}.
- \begin{itemize}
- \item Draft paper available at
- \url{http://gowthamk.github.io/docs/broom.pdf}
- \item Work-in-progress presentations at Microsoft Research India,
- Bangalore in August, 2014 and July, 2015. 
- \end{itemize}
+Gowtham Kaki, Kartik Nagar, Mahsa Najafzadeh, and Suresh Jagannathan.
+Alone Together: Compositional Reasoning and Inference for Weak
+Isolation. In proceedings of ACM SIGPLAN Conference on Principles of
+Programming Langauges (POPL), 2018 (To appear).
+\vspace*{0.1in}\\
+Gowtham Kaki, KC Sivaramakrishnan, Samodya Abeysiriwardane,
+and Suresh Jagannathan. Mergeable Types. At ML Family Workshop,
+2017.
+\vspace*{0.1in}\\
+KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan.
+Representation without Taxation: A Uniform, Low-Overhead, and
+High-Level Interface to Eventually Consistent Key-Value Stores. In
+IEEE Data Engineering Bulletin, 2016.
+\vspace*{0.1in}\\
+KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan.
+Declarative Programming over Eventually Consistent Data Stores. In
+proceedings of ACM SIGPLAN Conference on Programming Languages Design and
+Implementation (PLDI), 2015.
+\vspace*{0.1in}\\
+Gowtham Kaki, and Suresh Jagannathan. A Relational Framework
+for Higher-Order Shape Analysis. In proceedings of
+ACM SIGPLAN International Conference on Functional Programming
+(ICFP), 2014.
+\vspace*{0.1in}\\
+Sunita Bansal, Gowtham Kaki, and Chittaranjan Hota. A Novel
+Adaptive Scheduling Algorithm for Computational Grids. In
+Proceedings of IEEE International Conference on Internet
+Multimedia Systems Architecture and Application (IMSAA), 2009.
 
- {\bf Declarative Programming over Eventually Consistent Data Stores} \\
- (With Sivaramakrishnan KC., and Suresh Jagannathan) Devised a
- logic-based language framework to express high-level consistency
- requirements of NoSQL applications. The framework delivers
- application programmers from having to manually tune consistency
- levels of NoSQL stores, such as Cassandra, which are often tied to
- the implementation nuances of these stores. The framework also comes
- with an extensive support for scalable transactions. The
- implementation of the framework (called {\sc Quelea}) is available
- online at \url{https://github.com/kayceesrk/Quelea}.
- \begin{itemize}
- \item Published in the proceedings of ACM SIGPLAN Conference on
- Programming Languages Design and Implementation (PLDI'15)
- \item Presented at PLDI'15 at Portland, June 13-17, 2015.
- \item Presented at RF Seminar Series, Microsoft Research India,
- Bangalore in July, 2015.  
- \end{itemize}
-
-
- {\bf Relational Framework for Higher-order Shape Analysis} \\
- (With Suresh Jagannathan) Devised a specification language based on a
- decidable relational logic to automatically reason about structural
- properties in ML-like languages. Our specification language makes it
- possible to capture rich semantics of data structure transformations
- as logical formulas, and subsequently use them for either
- verification or proving program equivalence. The verification
- framework for our language (called {\sc Catalyst}) has been
- implemented, and is available for experimentation at
- \url{http://tycon.github.io/catalyst/}.
- \begin{itemize} \itemsep -2pt  % reduce space
- \item Published in the proceedings of the International Conference on
- Functional Programming (ICFP'14).
- \item Presented at ICFP'14, Gothenburg, 1st-6th September, 2014.
- \item Work-in-progress presentation at the Mid-west Verification Day
- (MVD), Chicago, 20th-21st September, 2013.
- \item Work-in-progress presentation on extending the framework with
- specification inference at the Mid-west Verification Day (MVD),
- Columbia, MO, 2nd-3rd October, 2014.
- \end{itemize}
-
-{\bf A Novel Adaptive Scheduling Algorithm for Computational Grids}\\
-(With S. Bansal, and Chittaranjan Hota) Devised a de-centralized
-dynamic load balancing algorithm for efficient task scheduling in
-computational grids.
- \begin{itemize} \itemsep -2pt  % reduce space
- \item Published in the proceedings of IEEE conference on Internet
- Multimedia Systems Architecture and Applications (IMSAA), Bangalore,
- India, 2009.
- \end{itemize}
-
+\section{Preprints/Drafts}
+Gowtham Kaki, Ganesan Ramalingam, Kapil Vaswani, and Dimitrios
+Vytioniotis. Safe Tansferable Regions for Big Data Processing.
+MSR Tech Report.
+\vspace*{0.1in}\\
+Gowtham Kaki, and Suresh Jagannathan. A Lightweight Symbolic Execution
+Framework for Ruby-on-Rails. Extended abstract presented at PLDI 2016
+Student Research Competition (SRC).
+\vspace*{0.1in}\\
+Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
+Jagannathan. From {\sf ACID} to {\sf BASE}: Effective Verification of
+Highly-Scalable Transactions through Bounded Staleness. Draft
+available on request.
+\vspace*{0.1in}\\
+ 
 \section{Professional \\ Experience}
 
 {\bf Research Intern, Microsoft Research India, Bangalore} \\
@@ -135,20 +104,15 @@ tools were used by Yahoo's content curators.
 {\bf Engineering intern, Qualcomm, Hyderabad, India} \hfill January - June, 2009\\
 QA Engineering for Application-specific integrated circuit (ASIC) -
 User interface module (UIM) group. Developed tools to test low-level
-mobile network code.\\
+mobile network code.
 
-\section{Academics}
-{\bf Relevant Graduate Coursework (With Grades)}\\
-\begin{itemize}
-\item Design \& Analysis of Algorithms (A), Programming Languages (A),
+\section{Course Work}
+Design \& Analysis of Algorithms (A), Programming Languages (A),
 Software Engineering (B), Metaprogramming and Program Generation (A+),
 Distributed Systems (A), Parallel Computing (A), and Current topics in
 Theoretical Computer Science (A-).  
-\item Attended Oregon Programming Languages Summer School (OPLSS'13)
-at Eugene, OR.
-\end{itemize}
 
-{\bf Courses Handled as a Teaching Assistant}\\
+\section{Teaching Assistantship}
 \begin{itemize}
 \item CS240 C Programming. Fall 2012.
 \item CS565 Programming Languages. Spring, 2013.
@@ -177,6 +141,7 @@ organized our techfest (APOGEE) in 2008.
 
 \section{References}
 Prof. Suresh Jagannathan (Purdue University).\\
+Dr. KC Sivaramakrishnan (Cambridge University)\\
 Dr. Ganesan Ramalingam (Microsoft Research). \\
 Other references will be available on request.
 \end{resume} 
