--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -16,15 +16,15 @@
 \name{Gowtham Kaki} 
  
 %\fontsize{9pt}{1} \selectfont
-\address{http://gowthamk.github.io \hspace{1.25in} gkaki@purdue.edu
+\address{https://gowthamk.github.io \hspace{1.35in} gkaki@purdue.edu
           \hspace{1.25in} (201) 417 1775 }
 
  
 \begin{resume} 
  
 \section{Research Focus}
-Applying PL techniques to simplify programming highly-scalable
-  data-intensive applications.
+Applying language design and automated reasoning techniques to
+  simplify programming complex real-world systems.
 
 \section{Education} 
 {\bf Ph.D., Computer Science}. \hfill 2012 - present\\
@@ -42,49 +42,53 @@ GPA: 8.68/10.0
 
 \section{Publications}
 
+Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
+  Jagannathan. Safe Replication through Bounded Concurrency
+  Verification. In the proceedings of ACM SIGPLAN Conference on
+  Object-Oriented Programming Systems Languages and Applications
+  (OOPSLA), 2018.
+\vspace*{0.1in}\\
+Gowtham Kaki, and G Ramalingam. Safe Transferable Regions.  In the
+  proceedings of the European Conference on Object-Oriented
+  Programming (ECOOP), 2018.
+\vspace*{0.1in}\\
 Gowtham Kaki, Kartik Nagar, Mahsa Najafzadeh, and Suresh Jagannathan.
-Alone Together: Compositional Reasoning and Inference for Weak
-Isolation. In proceedings of ACM SIGPLAN Conference on Principles of
-Programming Langauges (POPL), 2018 (To appear).
-\vspace*{0.1in}\\
-Gowtham Kaki, KC Sivaramakrishnan, Samodya Abeysiriwardane,
-and Suresh Jagannathan. Mergeable Types. At ML Family Workshop,
-2017.
+  Alone Together: Compositional Reasoning and Inference for Weak
+  Isolation. In the proceedings of ACM SIGPLAN Conference on
+  Principles of Programming Langauges (POPL), 2018.
 \vspace*{0.1in}\\
 KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan.
-Representation without Taxation: A Uniform, Low-Overhead, and
-High-Level Interface to Eventually Consistent Key-Value Stores. In
-IEEE Data Engineering Bulletin, 2016.
+  Representation without Taxation: A Uniform, Low-Overhead, and
+  High-Level Interface to Eventually Consistent Key-Value Stores. In
+  IEEE Data Engineering Bulletin, 2016.
 \vspace*{0.1in}\\
 KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan.
-Declarative Programming over Eventually Consistent Data Stores. In
-proceedings of ACM SIGPLAN Conference on Programming Languages Design and
-Implementation (PLDI), 2015.
+  Declarative Programming over Eventually Consistent Data Stores. In
+  the proceedings of ACM SIGPLAN Conference on Programming Languages
+  Design and Implementation (PLDI), 2015.
 \vspace*{0.1in}\\
-Gowtham Kaki, and Suresh Jagannathan. A Relational Framework
-for Higher-Order Shape Analysis. In proceedings of
-ACM SIGPLAN International Conference on Functional Programming
-(ICFP), 2014.
+Gowtham Kaki, and Suresh Jagannathan. A Relational Framework for
+  Higher-Order Shape Analysis. In the proceedings of ACM SIGPLAN
+  International Conference on Functional Programming (ICFP), 2014.
 \vspace*{0.1in}\\
-Sunita Bansal, Gowtham Kaki, and Chittaranjan Hota. A Novel
-Adaptive Scheduling Algorithm for Computational Grids. In
-Proceedings of IEEE International Conference on Internet
-Multimedia Systems Architecture and Application (IMSAA), 2009.
+Sunita Bansal, Gowtham Kaki, and Chittaranjan Hota. A Novel Adaptive
+  Scheduling Algorithm for Computational Grids. In the proceedings of
+  IEEE International Conference on Internet Multimedia Systems
+  Architecture and Application (IMSAA), 2009.
 
 \section{Preprints/Drafts}
-Gowtham Kaki, Ganesan Ramalingam, Kapil Vaswani, and Dimitrios
-Vytioniotis. Safe Tansferable Regions for Big Data Processing.
-MSR Tech Report.
+Gowtham Kaki, KC Sivaramakrishnan, Samodya Abeysiriwardane, and Suresh
+  Jagannathan. Mergeable Types. Extended abstract presented at ML
+  Family Workshop, 2017.
 \vspace*{0.1in}\\
 Gowtham Kaki, and Suresh Jagannathan. A Lightweight Symbolic Execution
 Framework for Ruby-on-Rails. Extended abstract presented at PLDI 2016
 Student Research Competition (SRC).
-\vspace*{0.1in}\\
-Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
-Jagannathan. From {\sf ACID} to {\sf BASE}: Effective Verification of
-Highly-Scalable Transactions through Bounded Staleness. Draft
-available on request.
-\vspace*{0.1in}\\
+% \vspace*{0.1in}\\
+% Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
+% Jagannathan. From {\sf ACID} to {\sf BASE}: Effective Verification of
+% Highly-Scalable Transactions through Bounded Staleness. Draft
+% available on request.
  
 \section{Professional \\ Experience}
 
@@ -118,31 +122,33 @@ Theoretical Computer Science (A-).
 \item CS565 Programming Languages. Spring, 2013.
 \end{itemize}
 
-\section{Grants and Scholarships}
+\section{Awards and Fellowships}
 \begin{itemize}
-\item NSF Travel grant for PLDI 2014
-\item ACM SIGPLAN PAC travel grant for ICFP 2014.
-\item ACM SIGPLAN PLMW scholarship for POPL 2014.
-\item Institute merit-cum-need scholarship during all 
-semesters of my undergraduate education at BITS, Pilani, India.
+  \item Google PhD Fellowship, 2018\footnote{\url{https://ai.googleblog.com/2018/04/announcing-2018-google-phd-fellows-for.html}}.
+  \item ACM SIGPLAN PAC funding for ICFP'14 and OOPSLA'18.
+  \item ECOOP travel funding, 2018.
+  \item ACM SIGPLAN PLMW scholarship, 2014.
+  \item Institute merit-cum-need scholarship during all semesters of
+    my undergraduate education at BITS Pilani, India.
 \end{itemize}
 
 \section {Professional Service}
 \begin{itemize}
-\item Coordinating weekly sessions of Purdue PL (PurPL) reading group.
-Notes/Slides for some sessions when I led the discussion are available
-on my web page.
-\item Purdue CS Graduate Student Board (GSB) office member, Fall 2011 and
-Spring 2012.
-\item Secretary (junior year), and office member (freshman and sophomore
-years) of Computer Science Association (CSA) BITS, Pilani. We
-organized our techfest (APOGEE) in 2008. 
+  \item Served on Artifact Evaluation Committees (AECs) of PLDI'16,
+    ICFP'17, and ICFP'18. 
+  \item Started the Purdue PL (PurPL) reading group in Fall, 2013,
+    which has since taken a life of its own to become an umbrella
+    organization for all PL groups at Purdue\footnote{
+    \url{http://purduepl.github.io/}}.
+  \item Served on Purdue CS Graduate Student Board (GSB), 2011-2012.
+  \item Served as the Secretary of Computer Science Association (CSA)
+    at BITS Pilani, 2007-08. 
 \end{itemize}
 
 \section{References}
 Prof. Suresh Jagannathan (Purdue University).\\
-Dr. KC Sivaramakrishnan (Cambridge University)\\
 Dr. Ganesan Ramalingam (Microsoft Research). \\
+Prof. KC Sivaramakrishnan (IIT Madras and Cambridge University)\\
 Other references will be available on request.
 \end{resume} 
 \end{document} 
