--- a/docs/cv/res2.tex
+++ b/docs/cv/res2.tex
@@ -42,6 +42,10 @@ GPA: 8.68/10.0
 
 \section{Publications}
 
+Gowtham Kaki, KC Sivaramakrishnan, and Suresh Jagannathan. Version
+  Control is for Your Data Too. In the proceedings of Symposium on
+  Advances in Programming Languages (SNAPL), 2019.
+\vspace*{0.1in}\\
 Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
   Jagannathan. Safe Replication through Bounded Concurrency
   Verification. In the proceedings of ACM SIGPLAN Conference on
@@ -77,9 +81,13 @@ Sunita Bansal, Gowtham Kaki, and Chittaranjan Hota. A Novel Adaptive
   Architecture and Application (IMSAA), 2009.
 
 \section{Preprints/Drafts}
+Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, and Suresh
+  Jagannathan. Relational Reasoning for Mergeable Replicated Data
+  Types. Under submission to OOPSLA 2019.
+\vspace*{0.1in}\\
 Gowtham Kaki, KC Sivaramakrishnan, Samodya Abeysiriwardane, and Suresh
   Jagannathan. Mergeable Types. Extended abstract presented at ML
-  Family Workshop, 2017.
+  Workshop, 2017.
 \vspace*{0.1in}\\
 Gowtham Kaki, and Suresh Jagannathan. A Lightweight Symbolic Execution
 Framework for Ruby-on-Rails. Extended abstract presented at PLDI 2016
@@ -110,11 +118,11 @@ QA Engineering for Application-specific integrated circuit (ASIC) -
 User interface module (UIM) group. Developed tools to test low-level
 mobile network code.
 
-\section{Course Work}
-Design \& Analysis of Algorithms (A), Programming Languages (A),
-Software Engineering (B), Metaprogramming and Program Generation (A+),
-Distributed Systems (A), Parallel Computing (A), and Current topics in
-Theoretical Computer Science (A-).  
+% \section{Course Work}
+% Design \& Analysis of Algorithms (A), Programming Languages (A),
+% Software Engineering (B), Metaprogramming and Program Generation (A+),
+% Distributed Systems (A), Parallel Computing (A), and Current topics in
+% Theoretical Computer Science (A-).  
 
 \section{Teaching Assistantship}
 \begin{itemize}
@@ -124,7 +132,13 @@ Theoretical Computer Science (A-).
 
 \section{Awards and Fellowships}
 \begin{itemize}
+  \item Maurice H. Halstead Memorial Award (2019) for outstanding
+    research in Software Engineering.
   \item Google PhD Fellowship, 2018\footnote{\url{https://ai.googleblog.com/2018/04/announcing-2018-google-phd-fellows-for.html}}.
+% \item Invited to Dagstuhl seminar on Language-based Verification
+%   Tools (March, 2015).
+% \item Invited to Shonan semninar on Programming Languages for
+%   Data-Intensive Applications (July, 2019).
   \item ACM SIGPLAN PAC funding for ICFP'14 and OOPSLA'18.
   \item ECOOP travel funding, 2018.
   \item ACM SIGPLAN PLMW scholarship, 2014.
@@ -135,7 +149,7 @@ Theoretical Computer Science (A-).
 \section {Professional Service}
 \begin{itemize}
   \item Served on Artifact Evaluation Committees (AECs) of PLDI'16,
-    ICFP'17, and ICFP'18. 
+    ICFP'17, ICFP'18, ECOOP'19, and PLDI'19.. 
   \item Started the Purdue PL (PurPL) reading group in Fall, 2013,
     which has since taken a life of its own to become an umbrella
     organization for all PL groups at Purdue\footnote{
@@ -148,7 +162,7 @@ Theoretical Computer Science (A-).
 \section{References}
 Prof. Suresh Jagannathan (Purdue University).\\
 Dr. Ganesan Ramalingam (Microsoft Research). \\
-Prof. KC Sivaramakrishnan (IIT Madras and Cambridge University)\\
+Prof. KC Sivaramakrishnan (IIT Madras)\\
 Other references will be available on request.
 \end{resume} 
 \end{document} 
