--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -171,8 +171,8 @@
       \\
       \textbf{\huge{Curriculum Vitae}} & \today\\*[2ex]
       \textbf{\large{Gowtham Kaki}} & {\url{http://gowthamk.github.io}}\\[0.5ex]
-      {305 N University Street, LWSN 2116N} & {\href{mailto:gkaki@purdue.edu}{gkaki@purdue.edu}}\\
-      {Purdue University, West Lafayette, 47906, USA} & {+1 201 417 1775}\\
+      {1111 Engineering Dr, ECOT 717} & {\href{mailto:gowtham.kaki@colorado.edu}{gowtham.kaki@colorado.edu}}\\
+      {Boulder, CO 80309, USA} & {+1 201 417 1775}\\
     \end{tabular*}
   };
 \end{tikzpicture}
@@ -217,7 +217,9 @@
 \end{nonumregion}
 
 \begin{nonumregion} {\lbar{Mahogany}Experience}
-	\positionnodesc{Visiting Assistant Professor, Purdue University}{Aug 2019 -- present}
+	\positionnodesc{Assistant Professor, University of Colorado - Boulder}{Aug 2020 -- present}
+	\positionnodesc{Post-Doctoral Researcher, Purdue University}{Jan 2020 -- Jul 2020}
+	\positionnodesc{Visiting Assistant Professor, Purdue University}{Aug 2019 -- Dec 2019}
   \positionnodesc{Google Research Fellow, Purdue University}{May 2018 -- Jul 2019}
   %\begin{position}{Chief Technology Officer, OCaml Labs Consultancy Ltd.}{Aug 2016 -- present}{}{Cambridge, UK}
   %  {Focussed on building the OCaml Platform: infrastructure to build, test, document and deploy OCaml-based software.}
@@ -373,7 +375,6 @@
   \end{itemize}
 \end{itemregion}
 
-\newpage
 \begin{itemregion}{\lbar{Mahogany}Talks}
 
   \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
@@ -446,6 +447,7 @@
 \end{itemregion}
 
 \begin{itemregion} {\lbar{Mahogany}Service}
+  \service{Program Committee (PC) Member: ML'20}
   \service{Artifact Evaluation Committee (AEC) Member: PLDI'16,
       ICFP'17, ICFP'18, ECOOP'19, and PLDI'19}
   \service{Organizer, Purdue PL (PurPL) Reading Group, Oct 2013 -- Dec 2016.}
