--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -382,6 +382,7 @@
         \hspace{1ex} OOPSLA 2019, Athens & \textit{Oct 2019} \\
         \hspace{1ex}  Shonan Seminar on Programming Language Support for
           Data-Intensive Applications, Japan & \textit{Jul 2019}\\
+        \hspace{1ex} University of Minnesota, Twin Cities & \textit{Nov 2020}\\
         \end{tabular*}
 
 	\begin{talk} {Automatic Reasoning in the Absence of Serializability}
@@ -447,6 +448,7 @@
 \end{itemregion}
 
 \begin{itemregion} {\lbar{Mahogany}Service}
+  \service{CS Dept., Graduate Committee (GradComm) Member, 2020-2021}
   \service{Program Committee (PC) Member: ML'20}
   \service{Artifact Evaluation Committee (AEC) Member: PLDI'16,
       ICFP'17, ICFP'18, ECOOP'19, and PLDI'19}
