--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -266,7 +266,7 @@
 
 	\begin{publication}{http://gowthamk.github.io/docs/mrdt.pdf}
 		{Mergeable Replicated Data Types}
-    {Oct 2018}{Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, Suresh Jagannathan}
+    {Oct 2019}{Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, Suresh Jagannathan}
 		{Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA 2019}
   \end{publication}
 
@@ -293,6 +293,13 @@
 \begin{region} {\lbar{Mahogany}Conference Publications\footnote{Journal
   publications J2-J4 are also published in the corresponding conference
   proceedings. They are not repeated.}}{{C}1}{5}
+
+	\begin{publication} {http://gowthamk.github.io/docs/pldi22.pdf}
+		{RunTime-Assisted Convergence in Replicated Data Types}
+		{June 2022} {Gowtham Kaki, Prasanth Prahladan, Nicholas Lewchenko}
+		{International Conference on Programming Language Design and
+    Implementation (PLDI 2022)}
+  \end{publication}
 
 	\begin{publication} {http://gowthamk.github.io/docs/snapl19.pdf}
 		{Version Control Is For Your Data Too}
@@ -330,6 +337,13 @@
 
 \begin{region} {\lbar{Mahogany}Workshop Publications \& Tech Reports}{{W}1}{5}
 
+	\begin{publication} {http://gowthamk.github.io/docs/papoc22.pdf}
+		{Bolt-On Convergence in Mergeable Replicated Data Types}
+		{April 2022} {Gowtham Kaki, Prasanth Prahladan, Nicholas Lewchenko}
+		{Principles and Practice of Consistency for Distributed Data
+    (PaPoC 2022)}
+  \end{publication}
+
 	\begin{publication}{https://gowthamk.github.io/docs/papoc18.pdf}
 		{Fine-grained distributed consistency guarantees with effect orchestration}
 		{Apr 2018}{Kia Rahmani, Gowtham Kaki, Suresh Jagannathan}
@@ -363,93 +377,99 @@
 \end{region}
 
 \begin{itemregion}{\lbar{Mahogany}Teaching}
-  \service{Course Instruction at Purdue University}
+  \service{CU Boulder}
+  \begin{itemize}
+    \service{Principles of Programming Langauges (CSCI3155), Spring'21 \& '22}
+    \service{\href{https://gowthamk.github.io/csci7000_s21/}{Distributed Systems Verification (CSCI7000)}, Spring'21}
+    \service{\href{https://csci5535.github.io/}{Foundations of
+    Programming Langauges (CSCI5535)}, Fall'21}
+  \end{itemize}
+  \service{Purdue}
   \begin{itemize}
     \service{Software Engineering (CS307), Fall 2019}
   \end{itemize}
-
-  \service{Teaching Assistantship at Purdue University}
-  \begin{itemize}
-    \service{Introduction to Programming in C (CS240), Aug 2012 -- Dec 2012.}
-    \service{Programming Languages (CS565), Jan 2013 -- May 2013.}
-  \end{itemize}
 \end{itemregion}
 
-\begin{itemregion}{\lbar{Mahogany}Talks}
+%%\begin{itemregion}{\lbar{Mahogany}Talks}
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Mergeable Replicated Data Types} \\
-        \hspace{1ex} OOPSLA 2019, Athens & \textit{Oct 2019} \\
-        \hspace{1ex}  Shonan Seminar on Programming Language Support for
-          Data-Intensive Applications, Japan & \textit{Jul 2019}\\
-        \hspace{1ex} University of Minnesota, Twin Cities & \textit{Nov 2020}\\
-        \end{tabular*}
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Mergeable Replicated Data Types} \\
+%%        \hspace{1ex} OOPSLA 2019, Athens & \textit{Oct 2019} \\
+%%        \hspace{1ex}  Shonan Seminar on Programming Language Support for
+%%          Data-Intensive Applications, Japan & \textit{Jul 2019}\\
+%%        \hspace{1ex} University of Minnesota, Twin Cities & \textit{Nov 2020}\\
+%%        \end{tabular*}
 
-	\begin{talk} {Automatic Reasoning in the Absence of Serializability}
-		{Jul 2019}  {Phd Defense, Purdue University} {}
-  \end{talk}
+%%  \begin{talk} {Automatic Reasoning in the Absence of Serializability}
+%%    {Jul 2019}  {Phd Defense, Purdue University} {}
+%%  \end{talk}
 
-%%\begin{talk} {Relational Reasoning for Mergeable Replicated Data Types}
-%%	{Jul 2019}  {Shonan Seminar on Programming Language Support for
-%%  Data-Intensive Applications, Japan} {}
-%%\end{talk}
+%%%%\begin{talk} {Relational Reasoning for Mergeable Replicated Data Types}
+%%%%	{Jul 2019}  {Shonan Seminar on Programming Language Support for
+%%%%  Data-Intensive Applications, Japan} {}
+%%%%\end{talk}
 
-	\begin{talk} {Version Control Is For Your Data Too}
-    {May 2019}  {SNAPL 2019, Brown University} {}
-  \end{talk}
+%%  \begin{talk} {Version Control Is For Your Data Too}
+%%    {May 2019}  {SNAPL 2019, Brown University} {}
+%%  \end{talk}
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Safe Replication through Bounded Concurrency Verification} \\
-        \hspace{1ex} OOPSLA 2018, Boston & \textit{Nov 2018} \\
-        \hspace{1ex} Purdue PL (PurPL) Seminar  & \textit{Nov 2018}\\
-        \hspace{1ex} Mid-West PL Summit, University of Wisconsin,
-        Madison  & \textit{Oct 2018}
-        \end{tabular*}
-   
-  \begin{talk} {Safe Transferable Regions}
-    {Jul 2018}  {ECOOP 2018, Amsterdam} {}
-  \end{talk}
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Safe Replication through Bounded Concurrency Verification} \\
+%%        \hspace{1ex} OOPSLA 2018, Boston & \textit{Nov 2018} \\
+%%        \hspace{1ex} Purdue PL (PurPL) Seminar  & \textit{Nov 2018}\\
+%%        \hspace{1ex} Mid-West PL Summit, University of Wisconsin,
+%%        Madison  & \textit{Oct 2018}
+%%        \end{tabular*}
+%%   
+%%  \begin{talk} {Safe Transferable Regions}
+%%    {Jul 2018}  {ECOOP 2018, Amsterdam} {}
+%%  \end{talk}
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Alone Together: Compositional Reasoning and Inference
-        under Weak Isolation} \\
-        \hspace{1ex} POPL 2018, Los Angeles & \textit{Jan 2018} \\
-        \hspace{1ex} Mid-West PL Summit, Indiana University,
-        Bloomington  & \textit{Dec 2017}
-        \end{tabular*}
-   
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Alone Together: Compositional Reasoning and Inference
+%%        under Weak Isolation} \\
+%%        \hspace{1ex} POPL 2018, Los Angeles & \textit{Jan 2018} \\
+%%        \hspace{1ex} Mid-West PL Summit, Indiana University,
+%%        Bloomington  & \textit{Dec 2017}
+%%        \end{tabular*}
+%%   
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Mergeable Types} \\
-        \hspace{1ex} ML Workshop 2017, Oxford, UK & \textit{Sep 2017} \\
-        \hspace{1ex} Purdue PL (PurPL) Seminar & \textit{Aug 2017} \\
-        \end{tabular*}
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Mergeable Types} \\
+%%        \hspace{1ex} ML Workshop 2017, Oxford, UK & \textit{Sep 2017} \\
+%%        \hspace{1ex} Purdue PL (PurPL) Seminar & \textit{Aug 2017} \\
+%%        \end{tabular*}
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Quelea: Declarative Programming under Eventual
-        Consistency} \\
-        \hspace{1ex} PLDI 2015, Portland & \textit{Jun 2015} \\
-        \hspace{1ex} Mid-West Verification, University of
-          Illinois, Urbana-Champaign & \textit{Oct 2015} \\
-        \hspace{1ex} Microsoft Research India Intern Day, Bangalore & 
-          \textit{Jul 2015} \\
-        \end{tabular*}
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Quelea: Declarative Programming under Eventual
+%%        Consistency} \\
+%%        \hspace{1ex} PLDI 2015, Portland & \textit{Jun 2015} \\
+%%        \hspace{1ex} Mid-West Verification, University of
+%%          Illinois, Urbana-Champaign & \textit{Oct 2015} \\
+%%        \hspace{1ex} Microsoft Research India Intern Day, Bangalore & 
+%%          \textit{Jul 2015} \\
+%%        \end{tabular*}
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-        \textbf{Catalyst: A Relational Framework for Higher-Order
-        Shape Analysis} \\
-        \hspace{1ex} Dagstuhl Seminar on Verification Tools for
-        Functional Programs, Dagstuhl, Germany & \textit{Apr 2016} \\
-        \hspace{1ex} Mid-West Verification, University of
-          Missouri, Columbia & \textit{Oct 2014} \\
-        \hspace{1ex} ICFP 2014, Gothenburg, Sweden & \textit{Sep 2014} \\
-        \end{tabular*}
+%%  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+%%        \textbf{Catalyst: A Relational Framework for Higher-Order
+%%        Shape Analysis} \\
+%%        \hspace{1ex} Dagstuhl Seminar on Verification Tools for
+%%        Functional Programs, Dagstuhl, Germany & \textit{Apr 2016} \\
+%%        \hspace{1ex} Mid-West Verification, University of
+%%          Missouri, Columbia & \textit{Oct 2014} \\
+%%        \hspace{1ex} ICFP 2014, Gothenburg, Sweden & \textit{Sep 2014} \\
+%%        \end{tabular*}
 
+%%\end{itemregion}
+
+\begin{itemregion} {\lbar{Mahogany} Research Grants}
+  \service{Developing AI agents to Support Teaching Staff in Large
+  Programming Classes, CU Boulder IRT seed grant (Co-PI)}
 \end{itemregion}
 
 \begin{itemregion} {\lbar{Mahogany}Service}
   \service{CS Dept., Graduate Committee (GradComm) Member, 2020-2021}
-  \service{Program Committee (PC) Member: ML'20}
+  \service{Program Committee (PC) Member: OOPSLA'22, ML'20}
   \service{Artifact Evaluation Committee (AEC) Member: PLDI'16,
       ICFP'17, ICFP'18, ECOOP'19, and PLDI'19}
   \service{Organizer, Purdue PL (PurPL) Reading Group, Oct 2013 -- Dec 2016.}
