Added papoc22 and pldi22 to publist

--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -170,7 +170,7 @@
     \begin{tabular*}{7.5in}{@{\extracolsep{\fill}}lr}
       \\
       \textbf{\huge{Curriculum Vitae}} & \today\\*[2ex]
-      \textbf{\large{Gowtham Kaki}} & {\url{http://gowthamk.github.io}}\\[0.5ex]
+      \textbf{\large{Gowtham Kaki}} & {\url{https://gowthamk.github.io}}\\[0.5ex]
       {1111 Engineering Dr, ECOT 717} & {\href{mailto:gowtham.kaki@colorado.edu}{gowtham.kaki@colorado.edu}}\\
       {Boulder, CO 80309, USA} & {+1 201 417 1775}\\
     \end{tabular*}
@@ -194,7 +194,7 @@
     \item
       \begin{itemize}
       \item Thesis:
-        \href{http://gowthamk.github.io/docs/thesis.pdf}{\textbf{Automatic
+        \href{https://gowthamk.github.io/docs/thesis.pdf}{\textbf{Automatic
           Reasoning Techniques for Non-Serializable \\
           \quad Data-Intensive Applications}}
         \vspace{-0.5ex}
@@ -264,26 +264,26 @@
 
 \begin{region} {\lbar{Mahogany}Journal Publications}{{J}1}{4}
 
-	\begin{publication}{http://gowthamk.github.io/docs/mrdt.pdf}
+	\begin{publication}{https://gowthamk.github.io/docs/mrdt.pdf}
 		{Mergeable Replicated Data Types}
     {Oct 2019}{Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, Suresh Jagannathan}
 		{Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA 2019}
   \end{publication}
 
-	\begin{publication}{http://gowthamk.github.io/docs/q9.pdf}
+	\begin{publication}{https://gowthamk.github.io/docs/q9.pdf}
 		{Safe Replication through Bounded Concurrency Verification}
     {Nov 2018}{Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, Suresh Jagannathan}
 		{Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA 2018}
   \end{publication}
 
-  \begin{publication}{http://gowthamk.github.io/docs/popl18.pdf}
+  \begin{publication}{https://gowthamk.github.io/docs/popl18.pdf}
     {Alone Together: Compositional Reasoning and Inference for Weak Isolation}
     {Jan 2018}
     {Gowtham Kaki, Kartik Nagar, Mahsa Najafzadeh, Suresh Jagannathan}
     {Proceedings of the ACM on Programming Languages (PACMPL), issue POPL 2018}
   \end{publication}
 
-  \begin{publication}{http://gowthamk.github.io/docs/quelea_ieee16.pdf}
+  \begin{publication}{https://gowthamk.github.io/docs/quelea_ieee16.pdf}
     {Representation without Taxation: A Uniform, Low-Overhead, and High-Level Interface to Eventually Consistent Key-Value Stores}
     {Mar 2016}{KC Sivaramakrishnan, Gowtham Kaki, Suresh Jagannathan}
     {IEEE Data Engineering Bulletin, 39(1): 52 -- 64}
@@ -294,33 +294,33 @@
   publications J2-J4 are also published in the corresponding conference
   proceedings. They are not repeated.}}{{C}1}{5}
 
-	\begin{publication} {http://gowthamk.github.io/docs/pldi22.pdf}
+	\begin{publication} {https://gowthamk.github.io/docs/pldi22.pdf}
 		{RunTime-Assisted Convergence in Replicated Data Types}
 		{June 2022} {Gowtham Kaki, Prasanth Prahladan, Nicholas Lewchenko}
 		{International Conference on Programming Language Design and
     Implementation (PLDI 2022)}
   \end{publication}
 
-	\begin{publication} {http://gowthamk.github.io/docs/snapl19.pdf}
+	\begin{publication} {https://gowthamk.github.io/docs/snapl19.pdf}
 		{Version Control Is For Your Data Too}
 		{May 2019} {Gowtham Kaki, KC Sivaramakrishnan, Suresh Jagannathan}
 		{Summit on Advances in Programming Languages (SNAPL 2019)}
   \end{publication}
 
-	\begin{publication} {http://gowthamk.github.io/docs/ecoop2018.pdf}
+	\begin{publication} {https://gowthamk.github.io/docs/ecoop2018.pdf}
 		{Safe Transferable Regions}
 		{Jul 2018} {Gowtham Kaki, G Ramalingam}
 		{European Conference on Object-Oriented Programming (ECOOP 2018)}
   \end{publication}
 
-  \begin{publication} {http://gowthamk.github.io/docs/quelea.pdf}
+  \begin{publication} {https://gowthamk.github.io/docs/quelea.pdf}
     {Declarative Programming over Eventually Consistent Data Stores}
     {Jun 2015} {KC Sivaramakrishnan, Gowtham Kaki, Suresh Jagannathan}
     {International Conference on Programming Language Design and
     Implementation (PLDI 2015)}
   \end{publication}
 
-  \begin{publication}{http://gowthamk.github.io/docs/icfp2014.pdf}
+  \begin{publication}{https://gowthamk.github.io/docs/icfp2014.pdf}
     {A Relational Framework for Higher-Order Shape Analysis}
     {Sep 2014}{Gowtham Kaki, Suresh Jagannathan}
     {International Conference on Functional Programming (ICFP 2014)}
@@ -337,7 +337,7 @@
 
 \begin{region} {\lbar{Mahogany}Workshop Publications \& Tech Reports}{{W}1}{5}
 
-	\begin{publication} {http://gowthamk.github.io/docs/papoc22.pdf}
+	\begin{publication} {https://gowthamk.github.io/docs/papoc22.pdf}
 		{Bolt-On Convergence in Mergeable Replicated Data Types}
 		{April 2022} {Gowtham Kaki, Prasanth Prahladan, Nicholas Lewchenko}
 		{Principles and Practice of Consistency for Distributed Data
