Link to PFP course added

--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -469,7 +469,8 @@
 
 \begin{itemregion} {\lbar{Mahogany}Service}
   \service{CS Dept., Graduate Committee (GradComm) Member, 2020-2021}
-  \service{Program Committee (PC) Member: OOPSLA'22, ML'20}
+  \service{Program Committee (PC) Member: PLDI'23, OOPSLA'23, OOPSLA'22, ML'20}
+  \service{Referee, TOPLAS 2022}
   \service{Artifact Evaluation Committee (AEC) Member: PLDI'16,
       ICFP'17, ICFP'18, ECOOP'19, and PLDI'19}
   \service{Organizer, Purdue PL (PurPL) Reading Group, Oct 2013 -- Dec 2016.}
