--- a/docs/new_cv/cv.tex
+++ b/docs/new_cv/cv.tex
@@ -180,9 +180,8 @@
 
 \hypersetup{urlcolor=zest}
 
-\begin{nonumregion}{\lbar{Mahogany}Research Focus}
-\item \hspace{1ex} \parbox{7.3in}{Automatic Reasoning for
-  Data-Intensive Application Safety.}
+\begin{nonumregion}{\lbar{Mahogany}Research Interests}
+\item \hspace{1ex} \parbox{7.3in}{Programming Languages, Formal Methods, Distributed Systems, Databases, Software Security, Automated Reasoning, and Neuro-symbolic AI.}
 \end{nonumregion}
 
 \begin{nonumregion}{\lbar{Mahogany}Education}
@@ -220,19 +219,17 @@
 	\positionnodesc{Assistant Professor, University of Colorado - Boulder}{Aug 2020 -- present}
 	\positionnodesc{Post-Doctoral Researcher, Purdue University}{Jan 2020 -- Jul 2020}
 	\positionnodesc{Visiting Assistant Professor, Purdue University}{Aug 2019 -- Dec 2019}
-  \positionnodesc{Google Research Fellow, Purdue University}{May 2018 -- Jul 2019}
   %\begin{position}{Chief Technology Officer, OCaml Labs Consultancy Ltd.}{Aug 2016 -- present}{}{Cambridge, UK}
   %  {Focussed on building the OCaml Platform: infrastructure to build, test, document and deploy OCaml-based software.}
   %\end{position}
-  \begin{position}{Research Assistant, Purdue University}{Jun 2013 -- Apr 2018}
-		{Advisor: Suresh Jagannathan}{}
-  \end{position}
+  \positionnodesc{Research and Teaching Assistant, Purdue University}{Aug 2011 -- Apr 2018}
+  
 
-  \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-    \textbf{Teaching Assistant, Purdue University} & \small{}\\
-    \hspace{1ex} Introduction to Programming in C (CS240) & \textit{Aug 2012 -- Dec 2012} \\
-    \hspace{1ex} Programming Languages (CS565) & \textit{Jan 2013 -- May 2013} \\
-    \end{tabular*}
+  %\item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+  %  \textbf{Teaching Assistant, Purdue University} & \small{}\\
+  %  \hspace{1ex} Introduction to Programming in C (CS240) & \textit{Aug 2012 -- Dec 2012} \\
+  %  \hspace{1ex} Programming Languages (CS565) & \textit{Jan 2013 -- May 2013} \\
+  %  \end{tabular*}
 
   \item \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
       \textbf{Research Intern, Microsoft Research, India} & \textit{May 2014 -- Aug 2014, \&}\\
@@ -251,6 +248,7 @@
   H. Halstead Memorial Award} for outstanding research in Software Engineering, Purdue University, 2019.}
   \service{\href{https://www.bitsaa.org/page/30U30}{``30 under 30''}
   award for outstanding accomplishments by a young alumnus, BITS Alumni Association (BITSAA), 2018. }
+  \service{Amazon Research Award 2023 For Domain-Specific Solvers for Distributed System Verification (Declined)}
 \end{itemregion}
 
 % \begin{itemregion} {\lbar{blue}Service}
@@ -263,6 +261,18 @@
 % \end{itemregion}
 
 \begin{region} {\lbar{Mahogany}Journal Publications}{{J}1}{4}
+
+  \begin{publication}{https://gowthamk.github.io/docs/oopsla23a.pdf}
+		{Verifying Indistinguishability of Privacy-Preserving Protocols }
+    {Oct 2023}{Kirby Linvill, Gowtham Kaki, and Eric Wustrow}
+		{Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA 2023}
+  \end{publication}
+
+  \begin{publication}{https://gowthamk.github.io/docs/oopsla23b.pdf}
+		{Historia: Refuting Callback Reachability with Message-History Logics}
+    {Oct 2023}{Shawn Meier, Sergio Mover, Gowtham Kaki, and Bor-Yuh Evan Chang}
+		{Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA 2023}
+  \end{publication}
 
 	\begin{publication}{https://gowthamk.github.io/docs/mrdt.pdf}
 		{Mergeable Replicated Data Types}
@@ -337,7 +347,14 @@
 
 \begin{region} {\lbar{Mahogany}Workshop Publications \& Tech Reports}{{W}1}{5}
 
-	\begin{publication} {https://gowthamk.github.io/docs/papoc22.pdf}
+  \begin{publication} {https://gowthamk.github.io/docs/papoc22.pdf}
+		{Distributed Consensus Algorithms as Replicated State Applications }
+		{April 2023} {Nicholas Lewchenko and Gowtham Kaki}
+		{Principles and Practice of Consistency for Distributed Data
+    (PaPoC 2023)}
+  \end{publication}
+
+  \begin{publication} {https://gowthamk.github.io/docs/papoc23.pdf}
 		{Bolt-On Convergence in Mergeable Replicated Data Types}
 		{April 2022} {Gowtham Kaki, Prasanth Prahladan, Nicholas Lewchenko}
 		{Principles and Practice of Consistency for Distributed Data
@@ -379,10 +396,11 @@
 \begin{itemregion}{\lbar{Mahogany}Teaching}
   \service{CU Boulder}
   \begin{itemize}
-    \service{Principles of Programming Langauges (CSCI3155), Spring'21 \& '22}
-    \service{\href{https://gowthamk.github.io/csci7000_s21/}{Distributed Systems Verification (CSCI7000)}, Spring'21}
+    \service{Principles of Programming Langauges (CSCI3155), Spring'21 \& '22, Fall'23}
+    \service{\href{https://gowthamk.github.io/csci7000_s21/}{Distributed Systems Verification (CSCI7000)}, Spring'21 \& '24}
     \service{\href{https://csci5535.github.io/}{Foundations of
     Programming Langauges (CSCI5535)}, Fall'21}
+    \service{\href{https://gowthamk.github.io/csci7000_pfp_s23/}{Principles of Functional Programming (CSCI7000)}, Spring'23}
   \end{itemize}
   \service{Purdue}
   \begin{itemize}
@@ -477,14 +495,6 @@
   \service{Expert Advisor, \href{http://gradright.com}{GradRight Inc.}, Oct 2018 -- Aug 2019}
   \service{Student Volunteer, PLDI'16}
 \end{itemregion}
-
-\begin{itemregion}{\lbar{Mahogany}Travel Grants \& Scholarships}
-  \service {ACM SIGPLAN PAC funding: ICFP'14 and OOPSLA'18.}
-  \service {ECOOP travel funding, 2018.}
-  \service {ACM SIGPLAN PLMW scholarship, 2014.}
-  \service {BITS Pilani merit-cum-need scholarship, Aug 2005 -- Dec 2008.}
-\end{itemregion}
-
 
 \ifdefined\genrefs
 
